KIOOpenWith: Store parent widget in QPointer

The parent may be closed in the time between creating the KIOOpenWith and promptUserForApplication

If that happens m_parentWidget is dangling

BUG: 481488
(cherry picked from commit df85938437594c6feb9f2fd4292578111541a17d)